fix(tooltip) fixing tooltip on mobile to not be seen while clicking or double click

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   .content {
-    width: 60%;
+    width: 80%;
   margin: auto;
   }
   #hove-button {
